--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 </head>
 <body>
 	<header>
-		<h2 class="first-heading">Reliable, efficient delivery</h2>
-		<h2 class="second-heading">Powered by Technology</h2>
+		<h1>Reliable, efficient delivery
+			<span>Powered by Technology</span>
+		</h1>
 		<p class="text">
 			Our Artificial Intelligence powered tools use millions of project data points 
 			to ensure that your project is successful
